# fullcontrol

./: .gitignore  README.md  SECURITY.md  VERSION.txt  lampshade.py  llm_ref.md  pyproject.toml  pytest.ini  requirements.txt  roadmap.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question_usage.md
bambu/: anyangle_phone_stand.ipynb  bambu_template.ipynb  hex_adapter.ipynb  nonplanar_spacer.ipynb  phone_holder.ipynb  ripple_texture.ipynb  spirals.ipynb
docs/: README.md  contents.ipynb  design_tips.ipynb  fast_demo.ipynb  gcode_controls.ipynb  geometry_functions.ipynb  lab_five_axis_demo.ipynb  lab_four_axis_demo.ipynb  lab_geometry.ipynb  lab_stl_output.ipynb  other_functions.ipynb  overview.ipynb  plot_controls.ipynb  readme.md  state_objects.ipynb
fullcontrol/: README.md  __init__.py  auxilliary_components.py  base.py  check.py  common.py  extra_functions.py  extrusion_classes.py  point.py  printer.py
lab/: README.md
models/: README.md  anyangle_phone_stand.ipynb  bambu_template.ipynb  blob_printing.ipynb  design_template.ipynb  fractional_design_engine_polar.ipynb  hex_adapter.ipynb  nonplanar_spacer.ipynb  nuts_and_bolts.ipynb  ripple_texture.ipynb  star_polygon_lattice.ipynb
tests/: CICD_test.py  README.md  __init__.py  combined_tutorials.py  conftest.py  test_basic.py  test_print_output_reference.txt  test_result.txt
tutorials/: README.md  contents.ipynb  faqs.md  gcode_controls.ipynb  lab_3mf_output.ipynb  lab_five_axis_demo.ipynb  lab_four_axis_demo.ipynb  lab_geometry.ipynb  lab_stl_output.ipynb  other_functions.ipynb  overview.ipynb
(+856 files in other folders)
