[project]
name = "fullcontrol"
version = "0.1.1"
authors = [
    { name="Andy Gleadall", email="andy@fullcontrol.xyz" },
    { name="Dirk Leas", email="dirk@fullcontrol.xyz" },
]
description = "fullcontrol - unconstrained design"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "plotly",
  "pydantic<2.0",
  "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fullcontrol", "lab"]

[project.urls]
"Homepage" = "https://fullcontrol.xyz"
"Repository" = "https://github.com/FullControlXYZ/fullcontrol"
"Documentation" = "https://github.com/FullControlXYZ/fullcontrol/tree/master/docs"
"Bug Tracker" = "https://github.com/FullControlXYZ/fullcontrol/issues"
